# hexlet_pytest

./: .coverage  Makefile  README.md  pyproject.toml
.github/workflows/: hello-world.yml
hexlet_pytest/: example.py  lesson6.py  lesson7.py  without.py
tests/: test_homework.py  test_lesson6.py
