[tool.poetry]
name = "hexlet_pytest"
version = "0.1.0"
description = ""
authors = ["drarov <drarov@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest-cov = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
